force-app/main/default/objects/SCC_Interface_Configuration__mdt/SCC_Interface_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Integration Configuration</label>
    <pluralLabel>Integration Configurations</pluralLabel>
</CustomObject>