force-app/main/default/objects/SCC_Interface_Configuration__mdt/fields/Main_URL__c.field-meta.xml
<CustomField>
    <fullName>Main_URL__c</fullName>
    <label>Main URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>