force-app/main/default/objects/SCC_Interface_Configuration__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <inlineHelpText>Name of named credential.</inlineHelpText>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>