force-app/main/default/objects/SCC_Interface_Configuration__mdt/fields/test_exception__c.field-meta.xml
<CustomField>
    <fullName>test_exception__c</fullName>
    <label>test exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Testing Exception</fullName>
                <default>true</default>
                <label>Not Testing Exception</label>
            </value>
            <value>
                <fullName>Client-Side HTTP Error - Salesforce</fullName>
            </value>
            <value>
                <fullName>Server-Side HTTP Error - External</fullName>
            </value>
            <value>
                <fullName>Unauthorized Endpoint</fullName>
            </value>
            <value>
                <fullName>Other Exceptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>