force-app/main/default/objects/SCC_Interface_Configuration__mdt/fields/test_mode__c.field-meta.xml
<CustomField>
    <fullName>test_mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test mode</label>
    <type>Checkbox</type>
</CustomField>